<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">设置</string>
    <string name="app_name">GPDroid</string>
    <string name="applet_aids">Applet AID</string>
    <string name="applet_count_label">卡片上的Applet数量：%d</string>
    <string name="applet_list_empty">卡片上未找到Applet</string>
    <string name="btn_choose_applet">选择Applet</string>
    <string name="btn_delete_all_applets">删除所有Applet</string>
    <string name="btn_get_data">获取数据</string>
    <string name="btn_install_applet">安装Applet</string>
    <string name="btn_list_applets">列出Applet</string>
    <string name="btn_refresh_applets">刷新列表</string>
    <string name="btn_set_default_applet">设为默认</string>
    <string name="channel_gemalto">是否为Gemalto？</string>
    <string name="channel_id">ID</string>
    <string name="channel_name">通道名称</string>
    <string name="channel_scpversion">SCP版本</string>
    <string name="channel_security">安全级别</string>
    <string name="channel_set">设置</string>
    <string name="check_default_selected">默认选中（卡片激活时自动选中）</string>
    <string name="confirm_delete_all_message">确定要删除所有Applet吗？安全域将被保留。此操作不可撤销。</string>
    <string name="confirm_delete_all_title">删除所有Applet</string>
    <string name="confirm_delete_cancel">取消</string>
    <string name="confirm_delete_selected_message">确定要删除此Applet吗？</string>
    <string name="confirm_delete_selected_title">删除Applet</string>
    <string name="confirm_delete_yes">是的，全部删除！</string>
    <string name="confirm_set_default_message">是否将此Applet设为默认选中的Applet？卡片激活时将自动选中它。</string>
    <string name="confirm_set_default_title">设置默认Applet</string>
    <string name="confirm_set_default_yes">是的，设为默认</string>
    <string name="default_applet_label">默认Applet：%s</string>
    <string name="default_applet_none">无</string>
    <string name="getdata_btn_cancel">取消</string>
    <string name="getdata_btn_ok">确定</string>
    <string name="getdata_descr">请以十六进制设置参数：</string>
    <string name="getdata_p1">P1</string>
    <string name="getdata_p2">P2</string>
    <string name="hello_world">你好，世界！</string>
    <string name="keyset_dek">ENC</string>
    <string name="keyset_descr">提示：请输入十六进制值（例如 FACD008020）</string>
    <string name="keyset_dialog_ask_overwrite">是否要覆盖此密钥集？</string>
    <string name="keyset_dialog_title">密钥集ID已存在！</string>
    <string name="keyset_id">ID</string>
    <string name="keyset_kek">KEK</string>
    <string name="keyset_mac">MAC</string>
    <string name="keyset_name">密钥集名称</string>
    <string name="keyset_negative">取消</string>
    <string name="keyset_positive">确定</string>
    <string name="keyset_version">版本</string>
    <string name="main_descr_channel">安全通道参数</string>
    <string name="main_descr_keyset">密钥集</string>
    <string name="parameter_OK_button">设置</string>
    <string name="parameter_privileges">权限 (0-255)</string>
    <string name="parameter_text">输入参数</string>
    <string name="parameter_title">如无需参数，请留空</string>
    <string name="privilege_default_selected">默认选中</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_activity_add_channel_set">添加通道集</string>
    <string name="title_activity_add_keyset">请输入新的密钥集</string>
    <string name="title_activity_applet_detail">Applet详情</string>
    <string name="title_activity_get_data">获取数据</string>
    <string name="title_activity_gpshell">GPDroid</string>
    <string name="title_activity_set_install_param">设置安装参数</string>
    <string name="title_applet_install_test">Applet安装测试</string>
    <string name="title_echo_test">APDU回显测试</string>
    <string name="pboc_app_name">FM1208 PBOC管理</string>
    <string name="pboc_balance_label">余额</string>
    <string name="pboc_cancel">取消</string>
    <string name="pboc_card_connected">卡片已连接</string>
    <string name="pboc_card_disconnected">卡片已断开</string>
    <string name="pboc_confirm">确认</string>
    <string name="pboc_ed_wallet">电子存折(ED)</string>
    <string name="pboc_enter_amount">输入金额(分)</string>
    <string name="pboc_enter_pin">输入PIN码(6位数字)</string>
    <string name="pboc_ep_wallet">电子钱包(EP)</string>
    <string name="pboc_fen">分</string>
    <string name="pboc_file_system">文件系统</string>
    <string name="pboc_get_random">获取随机数</string>
    <string name="pboc_load_money">充值(圈存)</string>
    <string name="pboc_nfc_disabled">NFC已关闭，请在设置中开启</string>
    <string name="pboc_nfc_not_supported">此设备不支持NFC</string>
    <string name="pboc_ok">确定</string>
    <string name="pboc_pin_auth">PIN认证</string>
    <string name="pboc_pin_failed">PIN认证失败</string>
    <string name="pboc_pin_verified">PIN认证成功</string>
    <string name="pboc_purchase">消费</string>
    <string name="pboc_refresh_balance">刷新余额</string>
    <string name="pboc_system_config">系统配置</string>
    <string name="pboc_tap_card">请将卡片贴近手机NFC区域</string>
    <string name="pboc_transaction_records">交易记录</string>
    <string name="pboc_yuan">元</string>
</resources>
