<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyset_descr" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/parameter_text" />
    <EditText android:id="@id/edit_parameter_parameters" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10">
        <requestFocus />
    </EditText>
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/parameter_privileges" />
    <EditText android:id="@id/edit_parameter_privileges" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="number" />
    <CheckBox android:textAppearance="?android:textAppearanceMedium" android:id="@id/check_default_selected" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/check_default_selected" />
    <Button android:id="@id/btn_parameter_set" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/parameter_OK_button" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip" android:text="@string/parameter_title" />
</LinearLayout>