<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/keyset_name" android:layout_weight="0.7" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView6" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/keyset_id" android:layout_weight="0.3" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/edit_keyset_name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:ems="10" android:layout_weight="0.7" />
        <EditText android:id="@id/edit_keyset_id" android:layout_width="0.0dip" android:layout_height="wrap_content" android:ems="10" android:layout_weight="0.3" android:inputType="number">
            <requestFocus />
        </EditText>
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:text="@string/keyset_version" android:layout_weight="1.0" />
        <EditText android:id="@id/edit_keyset_version" android:layout_width="40.0dip" android:layout_height="wrap_content" android:ems="10" android:layout_weight="0.25" android:inputType="numberDecimal" />
    </LinearLayout>
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/keyset_descr" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyset_mac" />
            <EditText android:id="@id/edit_keyset_mac" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="1" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyset_dek" />
            <EditText android:id="@id/edit_keyset_enc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="1" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:layout_gravity="top" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyset_kek" />
            <EditText android:id="@id/edit_keyset_kek" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="1" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_install_applet" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/keyset_positive" android:layout_weight="1.0" />
        <Button android:id="@id/btn_list_applets" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/keyset_negative" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>