<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/getdata_descr" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/textView1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/getdata_p1" android:layout_weight="1.0" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/textView2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/getdata_p2" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/edit_getdata_p1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:ems="10" android:layout_weight="1.0">
            <requestFocus />
        </EditText>
        <EditText android:id="@id/edit_getdata_p2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:ems="10" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <Button android:id="@id/btn_getdata_ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/getdata_btn_ok" android:layout_weight="1.0" />
        <Button android:id="@id/btn_getdata_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/getdata_btn_cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>