<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="center" android:id="@id/textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/channel_name" />
        <EditText android:id="@id/edit_channel_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:layout_weight="1.0">
            <requestFocus />
        </EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/TextView04" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/channel_scpversion" android:layout_weight="1.0" />
        <EditText android:id="@id/edit_channel_version" android:layout_width="60.0dip" android:layout_height="wrap_content" android:ems="10" android:inputType="number" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/TextView03" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/channel_security" android:layout_weight="1.0" />
        <EditText android:id="@id/edit_channel_security" android:layout_width="60.0dip" android:layout_height="wrap_content" android:ems="10" android:inputType="number" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <CheckBox android:gravity="end|fill_horizontal|start|center" android:layout_gravity="right" android:id="@id/chkbx_gemalto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/channel_gemalto" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
        <Button android:id="@id/btn_channel_positive" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/keyset_positive" android:layout_weight="1.0" />
        <Button android:id="@id/btn_channel_negative" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/keyset_negative" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>