<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Spinner android:id="@id/reader_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/main_descr_keyset" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Spinner android:id="@id/keyset_spinner" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <Button android:id="@id/btn_add_keyset" android:background="@drawable/ic_action_add_to_queue" android:layout_width="40.0dip" android:layout_height="40.0dip" android:minWidth="64.0dip" android:minHeight="64.0dip" android:layout_weight="0.0" />
        <Button android:id="@id/btn_remove_keyset" android:background="@drawable/ic_action_remove" android:layout_width="40.0dip" android:layout_height="40.0dip" android:minWidth="64.0dip" android:minHeight="64.0dip" android:layout_weight="0.0" />
    </LinearLayout>
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/main_descr_channel" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Spinner android:id="@id/channel_spinner" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <Button android:id="@id/btn_add_channelset" android:background="@drawable/ic_action_add_to_queue" android:layout_width="40.0dip" android:layout_height="40.0dip" android:minWidth="64.0dip" android:minHeight="64.0dip" android:layout_weight="0.0" />
        <Button android:id="@id/btn_remove_channelset" android:background="@drawable/ic_action_remove" android:layout_width="40.0dip" android:layout_height="40.0dip" android:minWidth="64.0dip" android:minHeight="64.0dip" android:layout_weight="0.0" />
    </LinearLayout>
    <TextView android:textStyle="bold" android:gravity="center" android:id="@id/text1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="未选择文件" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/button3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/btn_choose_applet" android:layout_weight="1.0" />
        <Button android:id="@id/btn_list_applets" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/btn_list_applets" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_install_applet" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/btn_install_applet" android:layout_weight="1.0" />
        <Button android:id="@id/btn_get_data" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/btn_get_data" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="测试" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:enabled="false" android:id="@id/btn_test_mf" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Mifare" android:layout_weight="0.31" />
        <Button android:enabled="false" android:id="@id/btn_applet_test" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="安装" android:layout_weight="0.31" />
        <Button android:id="@id/btn_echo_test" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="选择Applet" android:layout_weight="0.32" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
        <EditText android:id="@id/edit_license" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="6位授权码" android:singleLine="true" android:layout_weight="1.0" android:inputType="text" />
        <CheckBox android:id="@id/check_numeric" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="数字模式" />
        <Button android:id="@id/btn_activate_card" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="激活" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_copy_log" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="复制日志" android:layout_weight="1.0" />
        <Button android:id="@id/btn_clear_log" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="清空日志" android:layout_weight="1.0" />
    </LinearLayout>
    <Button android:id="@+id/btn_ats" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="FM1280 Java\u5361\u6539ATS" />
    <TextView android:gravity="bottom" android:id="@id/log" android:focusable="true" android:scrollbars="vertical" android:clickable="true" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="" android:layout_weight="1.0" android:fadeScrollbars="false" android:textIsSelectable="true" />
</LinearLayout>